--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\HP\AppData\Local\Temp\testng-eclipse-182823367\testng-customsuite.xml</span>
+                    <span>C:\Users\HP\AppData\Local\Temp\testng-eclipse-504714077\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="cucumberOptions.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Student will click on SiginUp button.&quot;, &quot;Student will Enter the credentials and login to the applic...)">runScenario("Student will click on SiginUp button.", "Student will Enter the credentials and login to the applic...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="cucumberOptions.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify that the Sign In button is clickable&quot;, &quot;Student will Enter the credentials and login to the ...)">runScenario("Verify that the Sign In button is clickable", "Student will Enter the credentials and login to the ...)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="cucumberOptions.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Check weather SiginUp button is enabled and displayed or not&quot;, &quot;Student will Enter the credentials ...)">runScenario("Check weather SiginUp button is enabled and displayed or not", "Student will Enter the credentials ...)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="cucumberOptions.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify that the Remember me is textbox is clickable or not&quot;, &quot;Student will Enter the credentials an...)">runScenario("Verify that the Remember me is textbox is clickable or not", "Student will Enter the credentials an...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,10 +136,30 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Student will click on SiginUp button.&quot;, &quot;Student will Enter the credentials and login to the applic...)">
-                  </a> <!-- runScenario("Student will click on SiginUp button.", "Student will Enter the credentials and login to the applic...) -->
+                  <a name="runScenario(&quot;Verify that the Sign In button is clickable&quot;, &quot;Student will Enter the credentials and login to the ...)">
+                  </a> <!-- runScenario("Verify that the Sign In button is clickable", "Student will Enter the credentials and login to the ...) -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Student will click on SiginUp button.","Student will Enter the credentials and login to the application.")</span>
+                  <span class="parameters">("Verify that the Sign In button is clickable","Student will Enter the credentials and login to the application.")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Check weather SiginUp button is enabled and displayed or not&quot;, &quot;Student will Enter the credentials ...)">
+                  </a> <!-- runScenario("Check weather SiginUp button is enabled and displayed or not", "Student will Enter the credentials ...) -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Check weather SiginUp button is enabled and displayed or not","Student will Enter the credentials and login to the application.")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Verify that the Remember me is textbox is clickable or not&quot;, &quot;Student will Enter the credentials an...)">
+                  </a> <!-- runScenario("Verify that the Remember me is textbox is clickable or not", "Student will Enter the credentials an...) -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Verify that the Remember me is textbox is clickable or not","Student will Enter the credentials and login to the application.")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -139,7 +169,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\HP\AppData\Local\Temp\testng-eclipse-182823367\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\HP\AppData\Local\Temp\testng-eclipse-504714077\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -196,16 +226,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'cucumberOptions.TestNGTestRunner')
-data.setCell(0, 3, 9532);
+data.setCell(0, 3, 6113);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'runScenario')
+data.setCell(1, 2, 'cucumberOptions.TestNGTestRunner')
+data.setCell(1, 3, 5939);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'runScenario')
+data.setCell(2, 2, 'cucumberOptions.TestNGTestRunner')
+data.setCell(2, 3, 5120);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 17 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -233,16 +271,24 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">cucumberOptions.TestNGTestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@2033fd39)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@62f9c790)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Student will click on SiginUp button.", "Student will Enter the credentials and login to the applic...)</span>
-                <span class="method-start">1260 ms</span>
+                <span class="method-name">runScenario("Verify that the Sign In button is clickable", "Student will Enter the credentials and login to the ...)</span>
+                <span class="method-start">563 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Verify that the Remember me is textbox is clickable or not", "Student will Enter the credentials an...)</span>
+                <span class="method-start">6505 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Check weather SiginUp button is enabled and displayed or not", "Student will Enter the credentials ...)</span>
+                <span class="method-start">12619 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">10797 ms</span>
+                <span class="method-start">17742 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
